# sayari-home-assignment-poc

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  compose.yaml  pyproject.toml  start.sh
.aiassistant/rules/: rules.md
docs/ai/: README.md
docs/ai/prompts/: 001-poc-implementation.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
scripts/: demo.sh  generate_large_document.py  wait-for-services.sh
src/document_pipeline/: __init__.py  config.py  errors.py  logging.py
src/document_pipeline/api/: app.py  dependencies.py  exception_handlers.py  main.py  middleware.py
src/document_pipeline/api/controllers/: documents_controller.py  health_controller.py  process_controller.py
src/document_pipeline/api/validations/: common.py  document_requests.py  document_responses.py  process_requests.py  process_responses.py
src/document_pipeline/infrastructure/: database.py  storage.py  temporal.py
src/document_pipeline/integrations/: classifier.py  extractor.py  minio_object_store.py  mock_classifier.py  mock_extractor.py  object_store.py
src/document_pipeline/models/: domain.py  enums.py
src/document_pipeline/models/orm/: __init__.py  base.py  classification_batch.py  document.py  document_chunk.py  document_run.py  token.py
src/document_pipeline/repositories/: interfaces.py  unit_of_work.py
src/document_pipeline/repositories/postgres/: batch_repository.py  chunk_repository.py  document_repository.py  mappers.py  run_repository.py  (+1 more)
src/document_pipeline/services/: chunking_service.py  cursor.py  document_query_service.py  processing_service.py  progress_service.py  reconciliation_service.py  rerun_service.py
src/document_pipeline/workers/: classification_worker.py  extraction_worker.py  workflow_worker.py
src/document_pipeline/workflows/: contracts.py  document_processing_workflow.py
test_documents/: large.txt  medium.txt  small.txt
tests/: conftest.py
tests/integration/: test_api_contract.py
tests/unit/: test_chunking.py  test_cursor_progress.py  test_error_handlers.py  test_providers.py  test_service_behaviour.py  test_validation.py
(+4 files in other folders)
